<resources>
    <string name="app_name">Kaybees</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_Btn">Sign In</string>
    <string name="sign_up_Btn">Sign Up</string>
    <string name="text_signin">Don\'t have an Account</string>
    <string name="text_signup">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_dish">Add Dish</string>
    <string name="add_dish_Btn">Update Dish</string>
    <string name="name">Name:</string>
    <string name="acual_price">Acual Price:</string>
    <string name="description">Description:</string>
    <string name="quantity">Quantity:</string>
    <string name="discounted_price">Discounted Price:</string>
    <string name="edit_dish">Edit Dish</string>
    <string name="edit_dish_Btn">Edit Dish</string>
    <string name="my_profile">Profile</string>
    <string name="upload_image">Upload Image</string>
    <string name="sign_out_btn">Sign Out</string>
    <string name="check_out">Check Out</string>

</resources>