<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:elevation="5dp"
    android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/food_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/dummy" />

        <ImageView
            android:id="@+id/deletebtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_baseline_delete_24"
            />



        <ImageView
            android:id="@+id/editbtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:layout_toRightOf="@id/deletebtn"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_baseline_edit_24"
            />



    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/viewname"
            android:layout_width="wrap_content"
            android:text="@string/name"
            android:textColor="@color/bgcolor"
            android:textSize="18sp"
            android:textStyle="bold"
            android:inputType="text"
            android:fontFamily="@font/lily_script_one"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/viewAcualprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/lily_script_one"
            android:inputType="number"
            android:text="@string/acual_price"
            android:textColor="@color/bgcolor"
            android:textSize="18sp" />


    </RelativeLayout>

    <TextView
        android:id="@+id/viewdishDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/bgcolor"
        android:textSize="18sp"
        android:inputType="text"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/lily_script_one"
        android:maxLines="3"/>


    <RelativeLayout
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/viewdishquantity"
            android:layout_width="wrap_content"
            android:text="@string/quantity"
            android:textColor="@color/bgcolor"
            android:textSize="18sp"
            android:textStyle="bold"
            android:inputType="number"
            android:fontFamily="@font/lily_script_one"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/viewdishdiscountedprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/lily_script_one"
            android:inputType="number"
            android:text="@string/discounted_price"
            android:textColor="#1482CC"
            android:textSize="18sp"
            android:textStyle="bold" />


    </RelativeLayout>

</LinearLayout>







</androidx.cardview.widget.CardView>