<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <com.airbnb.lottie.LottieAnimationView
            android:layout_marginTop="20dp"
            android:id="@+id/animationView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:lottie_rawRes="@raw/anim"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:text="@string/app_name"
            android:textColor="@color/bgcolor"
            android:textSize="35sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="20dp"
            app:cardCornerRadius="20dp"
            android:elevation="5dp"
            android:backgroundTint="@color/bgcolor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/add_dish"
                    android:textSize="24sp"
                    android:fontFamily="@font/amarante"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textColor="#fff"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter Your Dish Name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dish_name"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter Your Dish Description">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dish_des"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter Your Dish Price">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dish_price"
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter Your Discoounted Price">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dish_dis_price"
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Add Quantity">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dish_quantity"
                        android:inputType="phone"
                        android:imeOptions="actionNext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_update_dish"
            android:textStyle="bold"
            android:textSize="18dp"
            app:cornerRadius="20dp"
            android:text="@string/add_dish_Btn"/>




    </LinearLayout>
</ScrollView>